--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.4",
     "firebase": "^8.4.1",
+    "ityped": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-whatsapp": "^0.2.1",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
